@@ -1,4 +1,9 @@
 
+Version Next
+
+    - Added `-M' and `-L' command line flags
+    - Added `-F' flag to check_logwarn Nagios plugin
+
 Version 1.0.9 (r95) Released November 9, 2012
 
     - Add support for rotated logs that are xz(1) compressed
